crates/penrose_proc/tests/validate_bindings/bindings-clashing-with-templates-are-rejected.stderr
error: proc macro panicked
 --> $DIR/bindings-clashing-with-templates-are-rejected.rs:5:5
  |
5 |     validate_user_bindings!(("M-a")((("M-{}")("a"))));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: 'M-a' is bound as a keybinding more than once
